added header and footer

--- a/app/index.njk
+++ b/app/index.njk
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Cerami</title>
+  <title>Fasco</title>
   <link href="css/index.min.css" rel="stylesheet">
 </head>
 
