--- a/app/scss/index.scss
+++ b/app/scss/index.scss
@@ -6,3 +6,5 @@
 @import '../../node_modules/slick-carousel/slick/slick';
 @import '../../node_modules/@fancyapps/fancybox/dist/jquery.fancybox';
 @import '../../node_modules/rateyo/src/jquery.rateyo';
+@import '../module/_header/header';
+@import '../module/_footer/footer';
