--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -6,6 +6,11 @@ body {
 body {
   display: flex;
   flex-direction: column;
+  color: $default;
+  @extend %Poppins-400;
+  font-size: 16px;
+  font-style: normal;
+  line-height: 26px;
 }
 
 .main {
@@ -13,7 +18,9 @@ body {
 }
 
 .container {
+  max-width: 1300px;
   margin: 0 auto;
+  padding: 0 10px;
 }
 
 
@@ -23,4 +30,9 @@ a {
 
 .title {
   text-align: center;
+  @extend %Volkhov;
+  color: $title;
+  font-size: 46px;
+  margin-bottom: 20px;
+  line-height: 1.5;
 }
