--- a/app/scss/_vars.scss
+++ b/app/scss/_vars.scss
@@ -1,15 +1,36 @@
 //цвет
 
-$default: #8d8d8d;
+$default: #8A8A8A;
+$title: #484848;
+$accent: #FF4646;
 
 //шрифт
-%Unbounded-300 {
-  font-family: 'Your-font', sans-serif;
+%Poppins-400 {
+  font-family: 'Poppins-Regular', sans-serif;
+  font-weight: 400;
+}
+
+%Poppins-500 {
+  font-family: 'Poppins-Medium', sans-serif;
+  font-weight: 500;
+}
+
+%Volkhov {
+  font-family: 'Volkhov-Regular', sans-serif;
+  font-weight: 400;
+}
+
+%Numbers {
+  font-family: 'DigitalNumbers-Regular', sans-serif;
   font-weight: 400;
 }
 
 //кнопки, чекбоксы
 %btn {
+  color: #fff;
+  background-color: #000;
+  border-radius: 10px;
+  box-shadow: 0px 20px 35px 0px rgba(0, 0, 0, 0.15);
   cursor: pointer;
 }
 
